--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,24 @@ body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
+
+.btn {
+  border: 2px solid #5de995;
+  border-radius: 0.25rem;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.btn-header {
+  background: #5de995;
+  color: #fff;
+  font-weight: 500;
+  font-size: 1rem;
+  text-decoration: none;
+  transition: all 0.2s ease;
+
+  &:hover {
+    background: #5de995bf;
+  }
+}
