feat: add auth module login & register

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -11,7 +11,7 @@
         <li>
           <a
             class="btn btn-header"
-            routerLink="/login"
+            [routerLink]="['/auth/login']"
             routerLinkActive="active"
             >Iniciar Sesión</a
           >
@@ -19,7 +19,7 @@
         <li>
           <a
             class="btn btn-header"
-            routerLink="/register"
+            [routerLink]="['/auth/register']"
             routerLinkActive="active"
             >Registrarme</a
           >
