--- a/src/app/core/layout/components/home/home.component.html
+++ b/src/app/core/layout/components/home/home.component.html
@@ -1,1 +1,17 @@
-<p>home works!</p>
+<main>
+  <div class="container">
+    <div class="hero">
+      <div class="hero-right">
+        <h1>TaskList</h1>
+        <p>Una aplicación para gestionar tus tareas</p>
+        <a class="btn btn-header" routerLink="/task">Registrarme</a>
+      </div>
+      <div class="hero-left">
+        <div class="img-container">
+          <img src="assets/images/hero.webp" alt="Hero" />
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
+<app-footer></app-footer>
