--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,7 +1,3 @@
-.active {
-  color: #5de995;
-}
-
 header {
   background: #3585c6;
   width: 100vw;
@@ -9,7 +5,7 @@ header {
   .container {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 1rem 0;
+    padding: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
