--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <div class="container">
     <div class="logo">
-      <a href="/"> TaskList </a>
+      <a href="/"> TaskToDo. </a>
     </div>
     <nav class="nav">
       <ul>
